// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title false 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    
    <script>
      
      require(\\"source-map-support/source-map-support.js\\").install()
    </script>
    
  
  <link href=\\"styles.css\\" rel=\\"stylesheet\\"></head>
  <body>
    <div id=\\"app\\"></div>
  <script type=\\"text/javascript\\" src=\\"renderer.js\\"></script></body>
</html>"
`;

exports[`title null 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    
    <script>
      
      require(\\"source-map-support/source-map-support.js\\").install()
    </script>
    
  
  <link href=\\"styles.css\\" rel=\\"stylesheet\\"></head>
  <body>
    <div id=\\"app\\"></div>
  <script type=\\"text/javascript\\" src=\\"renderer.js\\"></script></body>
</html>"
`;

exports[`title true 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    <title>Test</title>
    <script>
      
      require(\\"source-map-support/source-map-support.js\\").install()
    </script>
    
  
  <link href=\\"styles.css\\" rel=\\"stylesheet\\"></head>
  <body>
    <div id=\\"app\\"></div>
  <script type=\\"text/javascript\\" src=\\"renderer.js\\"></script></body>
</html>"
`;
